cabal-version:   3.0
name:            proompt
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          andrii
maintainer:      25188+unorsk@users.noreply.github.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable proompt
  import:           warnings
  main-is:          Main.hs
  build-depends:    base >=4.17.0.0
  hs-source-dirs:   app
  default-language: GHC2021
